--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1>Yauheni Strukau</h1>
       <p class="color-blue">Trainee Frontend developer</p>
       <article class="contact">
+        <h2 hidden>hidden</h2>
         <a class="email" href="mailto:Jhezer1991@gmail.com">email: Jhezer1991@gmail.com</a>
         <a class="phone" href="tel:+375295748169">tel:+375(29)574-81-69</a>
       </article>
