--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           <h3>HTML,CSS courses</h3>
           <p class="discription">Free HTML Academy courses</p>
           <p class="discription">Free courses on Stepik.org</p>
+          <p class="discription">Study in RS School on course "JS / FRONT-END. STAGE 0"</p>
         </div>
         <div>
           <h3>Video on Youtube</h3>
@@ -59,6 +60,25 @@
           <p class="discription">Playing videogames</p>
           <p class="discription">Learning new technologies</p>
         </div>
+      </section>
+      <section class="project">
+        <h2>Projects</h2>
+        <ul>
+          <li><a href="https://estrukov.github.io/portfolio/">html page portfolio, testing work in HTMLAcademy</a></li>
+          <li><a href="https://estrukov.github.io/Botanikashop/">online shop, created on the marathon in HTMLAcademy</a>
+          </li>
+          <li><a href="https://estrukov.github.io/maketitshop/">created by free layout</a></li>
+        </ul>
+      </section>
+      <section class="code">
+        <h2>Code</h2>
+        <pre>
+        <code>
+          function multiply(a, b){
+          return a * b
+          }
+        </code>
+        </pre>
       </section>
     </main>
     <aside>
