docs: sort pctr in folders

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="assets/favicon.ico">
   <title>CV</title>
 </head>
 
@@ -83,7 +84,7 @@
     </main>
     <aside>
       <div class="avatar">
-        <img class="foto" src="../rsschool-cv/img/foto.jpg" alt="user foto" width="300" height="300">
+        <img class="foto" src="./assets/img/foto.jpg" alt="my foto" width="300" height="300">
       </div>
       <div>
         <h2>Skills</h2>
