feat: add code css for nav, footer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 </head>
 
 <body>
+  <header>
+    <nav>
+      <ol class="navigation">
+        <li><a href="#experiens">Experiens</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#passions">Passions</a></li>
+        <li><a href="#project">Project</a></li>
+        <li><a href="#code">Code</a></li>
+        <li><a href="#Skills">Skills</a></li>
+      </ol>
+    </nav>
+  </header>
   <div class="wrapper">
     <main>
       <h1>Yauheni Strukau</h1>
@@ -20,7 +32,7 @@
         <a class="phone" href="tel:+375295748169">tel:+375(29)574-81-69</a>
       </article>
 
-      <section class="experiens">
+      <section id="experiens" class="experiens">
         <h2>Experiens</h2>
         <div>
           <h3>Frontend developer</h3>
@@ -37,7 +49,7 @@
           </ul>
         </div>
       </section>
-      <section class="education">
+      <section class="education" id="education">
         <h2>Education</h2>
         <div>
           <h3>HTML,CSS courses</h3>
@@ -55,14 +67,14 @@
           <p class="discription">Авторы: Фримен Эрик, Фримен Элизабет</p>
         </div>
       </section>
-      <section class="passions">
+      <section class="passions" id="passions">
         <h2>Passions</h2>
         <div>
           <p class="discription">Playing videogames</p>
           <p class="discription">Learning new technologies</p>
         </div>
       </section>
-      <section class="project">
+      <section class="project" id="project">
         <h2>Projects</h2>
         <ul>
           <li><a href="https://estrukov.github.io/portfolio/">html page portfolio, testing work in HTMLAcademy</a></li>
@@ -71,7 +83,7 @@
           <li><a href="https://estrukov.github.io/maketitshop/">created by free layout</a></li>
         </ul>
       </section>
-      <section class="code">
+      <section class="code" id="code">
         <h2>Code</h2>
         <pre>
         <code>
@@ -86,7 +98,7 @@
       <div class="avatar">
         <img class="foto" src="./assets/img/foto.jpg" alt="my foto" width="300" height="300">
       </div>
-      <div>
+      <div id="Skills">
         <h2>Skills</h2>
         <h4 class="color-blue">Coding</h4>
         <ul>
@@ -108,6 +120,9 @@
       </div>
     </aside>
   </div>
+  <footer>
+    <a href="#">Go to top</a>
+  </footer>
   <script src="script.js"></script>
 </body>
 
