feat: add tegs in footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <nav>
+    <nav id="top">
       <ol class="navigation">
         <li><a href="#experiens">Experiens</a></li>
         <li><a href="#education">Education</a></li>
@@ -121,8 +121,17 @@
     </aside>
   </div>
   <footer>
-    <a href="#">Go to top</a>
+    <div>
+      <a href="https://github.com/EStrukov/rsschool-cv/tree/rsschool-cv-html/" target="blank"><img
+          src="./assets/svg/github.svg" alt="link GitHub" height="100"></a>
+      <a href="https://rs.school/js-stage0/" target="blank"><img src="./assets/svg/rs_school_js.svg" alt="link RS School"
+          height="100"></a>
+    </div>
+    <p>© 2021 by Yauheni Strukau</p>
   </footer>
+  <a class="top" href="#top" title="Go to top">
+    <p>Top</p>
+  </a>
   <script src="script.js"></script>
 </body>
 
