--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
     <main>
       <h1>Yauheni Strukau</h1>
       <p class="color-blue">Trainee Frontend developer</p>
-      <article class="contact">
+      <article>
         <h2 hidden>hidden</h2>
-        <a class="email" href="mailto:Jhezer1991@gmail.com">email: Jhezer1991@gmail.com</a>
-        <a class="phone" href="tel:+375295748169">tel:+375(29)574-81-69</a>
+        <ol class="contact">
+        <li><a class="email" href="mailto:Jhezer1991@gmail.com">Jhezer1991@gmail.com</a></li>
+        <li><a class="phone" href="tel:+375295748169">+375(29)574-81-69</a></li>
+        <li><a class="telegram" href="tg://resolve?domain=@StrongHBK">@StrongHBK</a></li>
+        </ol>
       </article>
 
       <section id="experiens" class="experiens">
@@ -122,7 +125,7 @@
   </div>
   <footer>
     <div>
-      <a href="https://github.com/EStrukov/rsschool-cv/tree/rsschool-cv-html/" target="blank"><img
+      <a href="https://github.com/EStrukov" target="blank"><img
           src="./assets/svg/github.svg" alt="link GitHub" height="100"></a>
       <a href="https://rs.school/js-stage0/" target="blank"><img src="./assets/svg/rs_school_js.svg" alt="link RS School"
           height="100"></a>
