feat: correct link telegram

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ol class="contact">
         <li><a class="email" href="mailto:Jhezer1991@gmail.com">Jhezer1991@gmail.com</a></li>
         <li><a class="phone" href="tel:+375295748169">+375(29)574-81-69</a></li>
-        <li><a class="telegram" href="tg://resolve?domain=@StrongHBK">@StrongHBK</a></li>
+        <li><a class="telegram" href="https://t.me/StrongHBK">@StrongHBK</a></li>
         </ol>
       </article>
 
